--- a/src/ui.html
+++ b/src/ui.html
@@ -40,11 +40,10 @@
             </li>
             <li class="clipboard">
               <label class="checkbox form-input">
-                <input type="checkbox">
-                <span class="checkbox-check">
+                <input type="checkbox" data-required="y" name="policy">
+                <span class="checkbox-check"></span>
 
-                </span>
-                <span class="checkbox-text txt14">checkbox-text txt14</span>
+                <span class="checkbox-text txt14">Принимаю политику конфиденциальности</span>
               </label>
             </li>
 
@@ -77,11 +76,13 @@
               </button>
             </li>
             <li class="clipboard">
-              <button class="swiper-btn swiper-btn-next "></button>
+              <div class="swiper-btn-container">
+                <button class="swiper-btn swiper-btn-prev "></button>
+                <button class="swiper-btn swiper-btn-next "></button>
+              </div>
+
             </li>
-            <li class="clipboard">
-              <button class="swiper-btn swiper-btn-prev "></button>
-            </li>
+
             <li class="clipboard">
               <div class="swiper-pagination">
 
@@ -101,11 +102,53 @@
 
 
             </li>
-          </ul>
+
+            <li class="clipboard">
+              <div class="section-heading">
+                <p class="section-heading-name">Наш подход</p>
+                <h2 class="tl2 section-heading-ttl">ответственное
+                  отношение и высокий уровень
+                  качества предоставляемых услуг
+                </h2>
+                <p class="section-heading-body">
+                  Благодаря этому мы успешно реализовали огромное
+                  количество интересных проектов для крупных российских
+                  и международных компаний
+                </p>
+              </div>
+
+
+            </li>
+
+            <li class="clipboard">
+              <div class="section-heading-swiper">
+
+                <div class="swiper-btn-container nav">
+                  <button class="swiper-btn swiper-btn-prev "></button>
+                  <button class="swiper-btn swiper-btn-next "></button>
+                </div>
+
+                <h2 class="tl2 txt-up name">
+                  наши проекты
+                </h2>
+
+
+                <a href="#" class="btn-arrow txt16 txt-up loadmore">
+                  Смотреть все
+                  <img src="./assets/images/icons/arrow-down-green.svg" alt="arrow">
+                </a>
+
+
+              </div>
+
 
         </div>
-      </section>
-    </main>
+        </li>
+        </ul>
+
+  </div>
+  </section>
+  </main>
   </div>
 
 
