--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Наркология</title>
+  <title>тсм</title>
 </head>
 
 <body>
   <div class="root">
     <ol>
-      <li>
-        <a href="./main.html">Главная</a>
-      </li>
+      <li> <a href="./main.html">Главная</a> </li>
+      <li> <a href="./projects.html">Проекты</a> </li>
+      <li> <a href="./projects-detail.html">Проекты детальная</a> </li>
+      <li> <a href="./news.html">Новости</a> </li>
+      <li> <a href="./news-detail.html">Новости детальная</a> </li>
+      <li> <a href="./career.html">Карьера</a> </li>
+      <li> <a href="./about.html">О компании</a> </li>
+      <li> <a href="./services.html">Услуги</a> </li>
+      <li> <a href="./recomendation.html">Рекомендации</a> </li>
+      <li> <a href="./not-found.html">404</a> </li>
+
+
 
     </ol>
 
