--- a/src/about.html
+++ b/src/about.html
@@ -12,7 +12,20 @@
     <div class="wrapper">
         <include src="./components/_header.html"></include>
         <main>
-            <h1 class="tl1">О нас</h1>
+            <section class="news news-heading section-bg ">
+                <div class="section-bg-img">
+                  <img src="../assets/images/heading.webp" alt="heading">
+                </div>
+                <div class="container">
+                  <div class="bread_white">
+                    <include src="./components/_bread.html"></include>
+                  </div>
+                  
+                  <h1 class="tl1 col-wh news-ttl txt-up">Строительная 
+                    компания ТСМ</h1>
+                </div>
+               
+              </section>
 
         </main>
         <include src="./components/_footer.html"></include>
