--- a/src/ui.html
+++ b/src/ui.html
@@ -94,6 +94,12 @@
           <h2>different</h2>
           <ul>
             <li class="clipboard">
+              <button class="loadMore">
+                Загрузить еще
+                <img src="./assets/images/icons/arrow-down-green.svg" alt="V">
+              </button>
+            </li>
+            <li class="clipboard">
 
               <ul class="marked-list">
                 <li>marked-list marked-list marked-list</li>
