--- a/src/news.html
+++ b/src/news.html
@@ -12,7 +12,34 @@
   <div class="wrapper">
     <include src="./components/_header.html"></include>
     <main>
-        <h1 class="tl1">Новости</h1>
+      <section class="news news-heading section-bg ">
+        <div class="section-bg-img">
+          <img src="../assets/images/heading.webp" alt="heading">
+        </div>
+        <div class="container">
+          <div class="bread_white">
+            <include src="./components/_bread.html"></include>
+          </div>
+
+          <h1 class="tl1 col-wh news-ttl txt-up">Новости</h1>
+        </div>
+
+      </section>
+      <section class="news news-cards">
+        <div class="container news-cards__c">
+          <ul class="news-cards__c-list">
+            <include src="./components/_card-news.html"></include>
+            <include src="./components/_card-news.html"></include>
+            <include src="./components/_card-news.html"></include>
+          </ul>
+          
+          <button class="loadMore">
+            Загрузить еще
+            <img src="./assets/images/icons/arrow-down-green.svg" alt="V">
+          </button>
+        
+        </div>
+      </section>
 
     </main>
     <include src="./components/_footer.html"></include>
