--- a/src/news-detail.html
+++ b/src/news-detail.html
@@ -12,18 +12,85 @@
   <div class="wrapper">
     <include src="./components/_header.html"></include>
     <main>
-      <section class="news news-heading section-bg ">
+      <section class="section-bg ">
         <div class="section-bg-img">
           <img src="../assets/images/heading.webp" alt="heading">
         </div>
-        <div class="container">
-          <div class="bread_white">
+        <div class="container section-bg__c">
+          <div class="bread_white bread-overlay ">
             <include src="./components/_bread.html"></include>
           </div>
-          
-          <h1 class="tl1 col-wh news-ttl txt-up">Новости детальная</h1>
+
+          <h1 class="tl1 col-wh news-detail-ttl txt-up">Новости детальная Новости детальная </h1>
+          <p class="tl3 col-wh news-detail-date">
+            2.02.2024
+          </p>
         </div>
-       
+
+      </section>
+      <section class="news-detail news-detail-main">
+        <div class="container news-detail-main__c">
+          <div class="news-detail-main__c-body">
+
+            <h3 class="tl3 txt-up">
+              В январе 2020 года перед нашей компанией была поставлена задача:
+
+            </h3>
+
+            <p class="txt20">
+              «Не нарушая комфортной работы сотрудников, увеличить рабочее пространство и функциональное назначение
+              зон.»
+            </p>
+
+            <span class="news-detail-main__c-body-bordered">
+              <span>Срок реализации проекта - 5 дней</span>
+              <span> Руководитель отдела эксплуатации – Виктор Постнов</span>
+            </span>
+
+
+            <ul class="marked-list">
+              <li class="txt20">Объединили два кабинета </li>
+              <li class="txt20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus ipsam sit culpa,
+                distinctio incidunt, corporis nobis quisquam cumque voluptates voluptatum qui sint libero consequatur
+                ipsa.</li>
+            </ul>
+
+          </div>
+          <ul class="news-detail-main__c-aside">
+            <li class="card-news card-news_small">
+              <a href="#" class="card-news__img">
+                <img src="../assets/images/projects.webp" alt="img">
+              </a>
+              <div class="card-news__info">
+                <h3 class="tl3 txt-up">Lorem
+                </h3>
+
+              </div>
+              <span class="txt18 col-gr card-news__date">02.02.2021
+                <a href="#" class="card-news__link txt16 txt-up flex-row">
+                  <img src="./assets/images/icons/arrow-down-green.svg" alt="V">
+                </a>
+              </span>
+            </li>
+            <li class="card-news card-news_small">
+              <a href="#" class="card-news__img">
+                <img src="../assets/images/projects.webp" alt="img">
+              </a>
+              <div class="card-news__info">
+                <h3 class="tl3 txt-up">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                </h3>
+
+              </div>
+              <span class="txt18 col-gr card-news__date">02.02.2021
+                <a href="#" class="card-news__link txt16 txt-up flex-row">
+                  <img src="./assets/images/icons/arrow-down-green.svg" alt="V">
+                </a>
+              </span>
+            </li>
+          </ul>
+
+        </div>
+
       </section>
 
 
