--- a/src/news.html
+++ b/src/news.html
@@ -16,8 +16,8 @@
         <div class="section-bg-img">
           <img src="../assets/images/heading.webp" alt="heading">
         </div>
-        <div class="container">
-          <div class="bread_white">
+        <div class="container section-bg__c">
+          <div class="bread_white bread-overlay">
             <include src="./components/_bread.html"></include>
           </div>
 
