--- a/src/not-found.html
+++ b/src/not-found.html
@@ -11,8 +11,21 @@
 <body>
   <div class="wrapper">
     <include src="./components/_header.html"></include>
-    <main>
-        <h1 class="tl1">404</h1>
+    <main class="notfound-main">
+      <section class="notfound">
+        <div class="container notfound__c">
+          <span class="notfound__c-code">
+            404
+          </span>
+          <h2 class="tl2 txt-up">Страница не найдена</h2>
+          <p class="txt18">Неправильно набран адрес или такая страница больше не существует</p>
+        
+          <button class="btn-green txt16">
+            ВЕРНУТЬСЯ НА ГЛАВНУЮ
+          </button>
+        
+        </div>
+      </section>
 
     </main>
     <include src="./components/_footer.html"></include>
