--- a/src/services.html
+++ b/src/services.html
@@ -12,7 +12,92 @@
   <div class="wrapper">
     <include src="./components/_header.html"></include>
     <main>
-        <h1 class="tl1">Услуги</h1>
+      <section class="service _first">
+
+        <div class="container service__c">
+          <include src="./components/_bread.html"></include>
+          <h1 class="tl1">Услуги</h1>
+          <ul class="service__c-list">
+            <li class="service__c-list-e">
+              <h3 class="tl3 txt-up">01 Проектирование</h3>
+              <hr>
+
+              <div class="service__c-list-e-img">
+                <img src="./assets/images/news.webp" alt="news">
+              </div>
+              <div class="service__c-list-e-body">
+                <p class="txt20">
+                  Наша компания предлагает полный спектр услуг по проектированию. Мы разрабатываем проекты с учетом
+                  всех требований заказчика и соблюдаем сроки выполнения работ. Наши специалисты имеют большой опыт в
+                  области проектирования и готовы воплотить ваши идеи в реальность. Мы работаем с самыми современными
+                  технологиями и програмным обеспечением, что позволяет нам создавать качественные и инновационные
+                  проекты. Доверьте нам проектирование вашего объекта и вы получите гарантию высокого качества и
+                  профессионального подхода к делу
+                </p>
+                <button class="btn-arrow txt16 txt-up loadmore modal-opener" data-modal="callback">
+                  ОСТАВИТЬ ЗАЯВКУ
+                  <img src="./assets/images/icons/arrow-down-green.svg" alt="arrow">
+                </button>
+
+              </div>
+
+
+            </li>
+            <li class="service__c-list-e service__c-list-e_reverse">
+              <h3 class="tl3 txt-up">02 строительство</h3>
+              <hr>
+
+
+              <div class="service__c-list-e-body">
+                <p class="txt20">
+                  Наша строительная компания специализируется на возведении зданий любого назначения от фундамента до
+                  кровли. Мы предлагаем полный спектр услуг, включая проектирование, строительство, ремонт и отделку
+                  помещений. Наши специалисты имеют богатый опыт и профессиональные навыки для выполнения качественных
+                  строительных работ в срок. Мы работаем с использованием новейших технологий и материалов, что
+                  обеспечивает надежность и долговечность построенных объектов. Заказывая строительство у нас, вы
+                  получаете гарантию качества и безопасности выполненных работ
+                </p>
+                <button class="btn-arrow txt16 txt-up loadmore modal-opener" data-modal="callback">
+                  ОСТАВИТЬ ЗАЯВКУ
+                  <img src="./assets/images/icons/arrow-down-green.svg" alt="arrow">
+                </button>
+
+              </div>
+              <div class="service__c-list-e-img">
+                <img src="./assets/images/news.webp" alt="news">
+              </div>
+
+            </li>
+            <li class="service__c-list-e">
+              <h3 class="tl3 txt-up">03 Эксплуатация</h3>
+              <hr>
+
+              <div class="service__c-list-e-img">
+                <img src="./assets/images/news.webp" alt="news">
+              </div>
+              <div class="service__c-list-e-body">
+                <p class="txt20">
+                  Мы предлагает услуги по эксплуатации строительных объектов любого типа и назначения. Мы осуществляем
+                  полный цикл работ по обслуживанию и техническому обслуживанию зданий, сооружений и коммуникаций. Наша
+                  команда профессионалов обеспечивает надежное и эффективное функционирование всех инженерных систем и
+                  оборудования. Мы предлагаем гибкие условия сотрудничества и индивидуальный подход к каждому клиенту.
+                  Доверьте нам управление и обслуживание вашего объекта, и вы получите высокое качество работы и
+                  оперативное реагирование на любые проблемы
+                </p>
+                <button class="btn-arrow txt16 txt-up loadmore modal-opener" data-modal="callback">
+                  ОСТАВИТЬ ЗАЯВКУ
+                  <img src="./assets/images/icons/arrow-down-green.svg" alt="arrow">
+                </button>
+
+              </div>
+
+
+            </li>
+
+          </ul>
+        </div>
+
+      </section>
 
     </main>
     <include src="./components/_footer.html"></include>
