--- a/src/about.html
+++ b/src/about.html
@@ -11,16 +11,18 @@
 <body>
   <div class="wrapper">
     <include src="./components/_header.html"></include>
+    <include src="./components/_header-mobile.html"></include>
     <main>
       <section class="section-bg ">
         <div class="section-bg-img">
           <img src="../assets/images/heading.webp" alt="heading">
         </div>
-        <div class="container section-bg__c">
-          <div class="bread_white bread-overlay">
+        <div class="container bread-overlay">
+          <div class=" bread_white">
             <include src="./components/_bread.html"></include>
           </div>
-
+        </div>
+        <div class="container section-bg__c">
           <h1 class="tl1 col-wh txt-up txt-wrap">Строительная
             компания TCM</h1>
         </div>
