--- a/src/main.html
+++ b/src/main.html
@@ -11,6 +11,7 @@
 <body>
   <div class="wrapper">
     <include src="./components/_header.html"></include>
+    <include src="./components/_header-mobile.html"></include>
     <main>
       <include src="./components/_heading.html"></include>
       <!--  -->
