--- a/src/news-detail.html
+++ b/src/news-detail.html
@@ -11,17 +11,20 @@
 <body>
   <div class="wrapper">
     <include src="./components/_header.html"></include>
+    <include src="./components/_header-mobile.html"></include>
     <main>
       <section class="section-bg ">
         <div class="section-bg-img">
           <img src="../assets/images/heading.webp" alt="heading">
         </div>
-        <div class="container section-bg__c">
-          <div class="bread_white bread-overlay ">
+        <div class="container bread-overlay">
+          <div class=" bread_white">
             <include src="./components/_bread.html"></include>
           </div>
+        </div>
 
-          <h1 class="tl1 col-wh news-detail-ttl txt-up">Новости детальная Новости детальная </h1>
+        <div class="container section-bg__c">
+          <h1 class="tl1 col-wh news-detail-ttl txt-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, at!</h1>
           <p class="tl3 col-wh news-detail-date">
             2.02.2024
           </p>
