--- a/src/news.html
+++ b/src/news.html
@@ -11,16 +11,19 @@
 <body>
   <div class="wrapper">
     <include src="./components/_header.html"></include>
+    <include src="./components/_header-mobile.html"></include>
     <main>
       <section class="news news-heading section-bg ">
         <div class="section-bg-img">
           <img src="../assets/images/heading.webp" alt="heading">
         </div>
-        <div class="container section-bg__c">
-          <div class="bread_white bread-overlay">
+        <div class="container bread-overlay">
+          <div class=" bread_white">
             <include src="./components/_bread.html"></include>
           </div>
+        </div>
 
+        <div class="container section-bg__c">
           <h1 class="tl1 col-wh news-ttl txt-up">Новости</h1>
         </div>
 
@@ -28,8 +31,6 @@
       <section class="news news-cards">
         <div class="container news-cards__c">
           <ul class="news-cards__c-list">
-            <include src="./components/_card-news.html"></include>
-            <include src="./components/_card-news.html"></include>
             <include src="./components/_card-news.html"></include>
           </ul>
           
