--- a/src/projects-detail.html
+++ b/src/projects-detail.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-  <div class="wrapper bg-wh">
+  <div class="wrapper ">
     <include src="./components/_header.html"></include>
-    <main class="bg-wh">
+    <include src="./components/_header-mobile.html"></include>
+    <main class="">
       <section class="projects-detail projects-detail-top">
 
-        <div class="swiper">
-          <div class="bread-overlay bread_white">
+        <div class="container bread-overlay">
+          <div class=" bread_white">
             <include src="./components/_bread.html"></include>
           </div>
+        </div>
 
+        <div class="swiper">
           <ul class="swiper-wrapper">
             <li class="swiper-slide">
               <img src="./assets/images/contact-us.webp" alt="project">
@@ -59,6 +62,8 @@
           </li>
         </ul>
       </section>
+
+
       <section class="projects-detail projects-detail-main">
         <div class="container projects-detail-main__c">
           <div class="projects-detail-main__c-imgs">
