--- a/src/about.html
+++ b/src/about.html
@@ -15,7 +15,7 @@
     <main>
       <section class="section-bg ">
         <div class="section-bg-img">
-          <img src="../assets/images/heading.webp" alt="heading">
+          <img src="./assets/images/heading.webp" alt="heading">
         </div>
         <div class="container bread-overlay">
           <div class=" bread_white">
@@ -136,7 +136,7 @@
 
       <section class="section-bg about-ready">
         <div class="section-bg-img">
-          <img src="../assets/images/heading.webp" alt="heading">
+          <img src="./assets/images/heading.webp" alt="heading">
         </div>
         <div class="container section-bg__c ">
           <div class="about-ready__c">
