--- a/src/main.html
+++ b/src/main.html
@@ -65,7 +65,7 @@
       <section class="main princeples ">
         <div class="section-bg">
           <div class="section-bg-img">
-            <img src="../assets/images/principles.webp" alt="section-bg">
+            <img src="./assets/images/principles.webp" alt="section-bg">
           </div>
           <div class="container princeples__top">
             <h2 class="tl2 txt-up">НадЁжность
