--- a/src/news-detail.html
+++ b/src/news-detail.html
@@ -15,7 +15,7 @@
     <main>
       <section class="section-bg ">
         <div class="section-bg-img">
-          <img src="../assets/images/heading.webp" alt="heading">
+          <img src="./assets/images/heading.webp" alt="heading">
         </div>
         <div class="container bread-overlay">
           <div class=" bread_white">
@@ -62,7 +62,7 @@
           <ul class="news-detail-main__c-aside">
             <li class="card-news card-news_small">
               <a href="#" class="card-news__img">
-                <img src="../assets/images/projects.webp" alt="img">
+                <img src="./assets/images/projects.webp" alt="img">
               </a>
               <div class="card-news__info">
                 <h3 class="tl3 txt-up">Lorem
@@ -77,7 +77,7 @@
             </li>
             <li class="card-news card-news_small">
               <a href="#" class="card-news__img">
-                <img src="../assets/images/projects.webp" alt="img">
+                <img src="./assets/images/projects.webp" alt="img">
               </a>
               <div class="card-news__info">
                 <h3 class="tl3 txt-up">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
