--- a/src/career.html
+++ b/src/career.html
@@ -15,7 +15,7 @@
     <main>
       <section class="section-bg ">
         <div class="section-bg-img">
-          <img src="../assets/images/heading.webp" alt="heading">
+          <img src="./assets/images/heading.webp" alt="heading">
         </div>
         <div class="container bread-overlay">
           <div class=" bread_white">
